# papier

./: Cargo.toml  README.md  meson.build  one.zagura.Papier.json
data/: meson.build  one.zagura.Papier.appdata.xml.in  one.zagura.Papier.desktop.in  one.zagura.Papier.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.rs  main.rs  meson.build  papier.gresource.xml  shortcut-window.ui  style.css
src/data/: mod.rs  text.rs
src/data/table/: column.rs  mod.rs  row.rs
src/db/: mod.rs  saveable.rs  store.rs
src/ui/: mod.rs
src/ui/cmd/: mod.rs  search.rs
src/ui/file/: components.rs  mod.rs
src/ui/file/table/: mod.rs
src/ui/file/text/: components.rs  mod.rs
