[package]
name = "papier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
json = "0.12.4"
rand = "0.8.5"
glib = "0.17.9"
rust-fuzzy-search = "0.1.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[dependencies.gtk4]
version = "0.6.6"
features = ["gnome_44"]

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_3"]